force-app/main/default/objects/Design_Request__c/fields/Status_Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Approved__c</fullName>
    <label>Status Date - Approved</label>
    <type>DateTime</type>
</CustomField>