force-app/main/default/objects/Design_Request__c/fields/Status_Date_Complete__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Complete__c</fullName>
    <label>Status Date - Complete</label>
    <type>DateTime</type>
</CustomField>