force-app/main/default/objects/Design_Request__c/fields/Status_Date_Current__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Current__c</fullName>
    <label>Status Date - Current</label>
    <type>DateTime</type>
</CustomField>