force-app/main/default/objects/Design_Request__c/fields/Status_Date_Design_Review__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Design_Review__c</fullName>
    <label>Status Date - Design Review</label>
    <type>DateTime</type>
</CustomField>