force-app/main/default/objects/Design_Request__c/fields/Status_Date_Plan__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Plan__c</fullName>
    <label>Status Date - Plan</label>
    <type>DateTime</type>
</CustomField>