force-app/main/default/objects/Design_Request__c/fields/Status_Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Returned__c</fullName>
    <label>Status Date - Returned</label>
    <type>DateTime</type>
</CustomField>