force-app/main/default/objects/Design_Request__c/fields/Sum_of_Open_Opportunity_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Open_Opportunity_Revenue__c</fullName>
    <formula>Opportunity__r.Account.Sum_of_Open_Opp_revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Open Opportunity Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>