force-app/main/default/objects/Design_Request__c/fields/Sum_of_Open_Opportunity_Revenue_Parent__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Open_Opportunity_Revenue_Parent__c</fullName>
    <formula>Opportunity__r.Account.Parent.Sum_of_Open_Opp_revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sum of Open Opportunity Revenue (Parent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>