force-app/main/default/objects/Design_Request__c/fields/Testing__c.field-meta.xml
<CustomField>
    <fullName>Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Testing needed?</description>
    <label>Testing</label>
    <type>Checkbox</type>
</CustomField>