force-app/main/default/objects/Design_Request__c/fields/Total_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Turnaround_Time__c</fullName>
    <formula>IF (
 NOT(ISBLANK(Status_Date_Complete__c)) ,
 Status_Date_Complete__c - CreatedDate ,
 null
)</formula>
    <label>Total Turnaround Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>