force-app/main/default/objects/Design_Request__c/fields/Total_Turnaround_Time_No_Weekends__c.field-meta.xml
<CustomField>
    <fullName>Total_Turnaround_Time_No_Weekends__c</fullName>
    <formula>IF(
NOT(ISBLANK(Status_Date_Complete__c))
,

Status_Date_Complete__c-CreatedDate

-

/*Find the number of weekend days between the 2 dates*/

(FLOOR((DATEVALUE(Status_Date_Complete__c)-DATEVALUE(CreatedDate))/7)*2

+

IF(AND(WEEKDAY(DATEVALUE(CreatedDate))=1,WEEKDAY(DATEVALUE(Status_Date_Complete__c))&lt;&gt;7),1,

IF(CASE(WEEKDAY(DATEVALUE(CreatedDate)),1,8,WEEKDAY(DATEVALUE(CreatedDate)))&gt;CASE(WEEKDAY(DATEVALUE(Status_Date_Complete__c)),1,8,WEEKDAY(DATEVALUE(Status_Date_Complete__c))),2,

IF(OR(WEEKDAY(DATEVALUE(Status_Date_Complete__c))=7,WEEKDAY(DATEVALUE(CreatedDate))=1),1,

IF(OR(WEEKDAY(DATEVALUE(Status_Date_Complete__c))=1,WEEKDAY(DATEVALUE(CreatedDate))=7),2,

0)))))

+

IF(OR(WEEKDAY(DATEVALUE(Status_Date_Complete__c))=1,WEEKDAY(DATEVALUE(Status_Date_Complete__c))=7),DATETIMEVALUE(TEXT(DATEVALUE(Status_Date_Complete__c))+&quot; 00:00:00&quot;)+1-Status_Date_Complete__c,0)

+

IF(OR(WEEKDAY(DATEVALUE(CreatedDate))=1,WEEKDAY(DATEVALUE(CreatedDate))=7),CreatedDate-DATETIMEVALUE(TEXT(DATEVALUE(CreatedDate))+&quot; 00:00:00&quot;),0)

,
null
)</formula>
    <label>Total Turnaround Time (No Weekends)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>