force-app/main/default/objects/Design_Request__c/fields/Updated_in_WF__c.field-meta.xml
<CustomField>
    <fullName>Updated_in_WF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated in WF</label>
    <type>Checkbox</type>
</CustomField>