force-app/main/default/objects/Design_Request__c/fields/Vine__c.field-meta.xml
<CustomField>
    <fullName>Vine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vine</label>
    <type>Checkbox</type>
</CustomField>