force-app/main/default/objects/Design_Request__c/fields/Workfront_Program__c.field-meta.xml
<CustomField>
    <fullName>Workfront_Program__c</fullName>
    <formula>Opportunity__r.Workfront_Program__c</formula>
    <label>Workfront Program #</label>
    <type>Text</type>
</CustomField>