force-app/main/default/objects/Design_Request__c/fields/Workfront_Project__c.field-meta.xml
<CustomField>
    <fullName>Workfront_Project__c</fullName>
    <externalId>true</externalId>
    <label>Workfront Project #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>