force-app/main/default/objects/Design_Request__c/validationRules/Lock_Design_Review.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Design_Review</fullName>
    <active>true</active>
    <description>Cannot update Design Requests after they&apos;ve been submitted for Design Review</description>
    <errorConditionFormula>AND(
 ISPICKVAL(PRIORVALUE(Status__c), &quot;Design Review&quot;),
 NOT( ISNEW() ),
 $Profile.Name &lt;&gt; &apos;API admin&apos;,
 $Profile.Name &lt;&gt; &apos;System Admin - API&apos;,
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
 $Profile.Name &lt;&gt; &apos;Salesforce API Only System Integrations&apos;
)</errorConditionFormula>
    <errorMessage>Cannot update Design Requests after they&apos;ve been submitted for Design Review</errorMessage>
</ValidationRule>