force-app/main/default/objects/Design_Request__c/validationRules/Lock_Returned.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Returned</fullName>
    <active>true</active>
    <description>Lock all Returned Design Requests from editing</description>
    <errorConditionFormula>AND(
 ISPICKVAL(PRIORVALUE(Status__c), &quot;Returned&quot;),
 $Profile.Name &lt;&gt; &apos;API admin&apos;,
 $Profile.Name &lt;&gt; &apos;System Admin - API&apos;,
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
 $Profile.Name &lt;&gt; &apos;Salesforce API Only System Integrations&apos;
)</errorConditionFormula>
    <errorMessage>Cannot update Returned Design Requests.</errorMessage>
</ValidationRule>