force-app/main/default/objects/Design_Request__c/validationRules/Only_Admin_WF_Stages.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admin_WF_Stages</fullName>
    <active>true</active>
    <description>Only System Admin or Workfront Users can update or set status to anything other than Specialist Review, Design Review, or Returned</description>
    <errorConditionFormula>AND(
 OR(
  ISPICKVAL( Status__c , &quot;Approved&quot;),
  ISPICKVAL( Status__c , &quot;Plan&quot;),
  ISPICKVAL( Status__c , &quot;Current&quot;),
  ISPICKVAL( Status__c , &quot;Complete&quot;),
  ISPICKVAL( Status__c , &quot;On Hold&quot;),
  AND(
   ISCHANGED( Status__c ),
   OR(
    ISPICKVAL(PRIORVALUE( Status__c ), &quot;Approved&quot;),
    ISPICKVAL(PRIORVALUE( Status__c ), &quot;Plan&quot;),
    ISPICKVAL(PRIORVALUE( Status__c ), &quot;Current&quot;),
    ISPICKVAL(PRIORVALUE( Status__c ), &quot;Complete&quot;),
    ISPICKVAL(PRIORVALUE( Status__c ), &quot;On Hold&quot;)
   )
  )
 ),
 $Profile.Name &lt;&gt; &quot;API admin&quot;,
 $Profile.Name &lt;&gt; &quot;System Admin - API&quot;,
 $Profile.Name &lt;&gt; &quot;Salesforce API Only System Integrations&quot;,
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Only System Admin or Workfront Users can update or set status to anything other than Specialist Review, Design Review, or Returned</errorMessage>
</ValidationRule>