force-app/main/default/objects/Design_Request__c/validationRules/Only_Specialists_can_Advance.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Specialists_can_Advance</fullName>
    <active>true</active>
    <description>Only Specialists can advance Design Requests to Design Review</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c, &quot;Design Review&quot;),
 ISPICKVAL(PRIORVALUE(Status__c), &quot;Specialist Review&quot;),
 $User.Network_Id__c &lt;&gt; &quot;koepkw01&quot;,
 $User.Network_Id__c &lt;&gt; &quot;BASHAM01&quot;,
 $User.Network_Id__c &lt;&gt; &quot;WRINALD&quot;,
 $User.Network_Id__c &lt;&gt; &quot;npeer&quot;,
 NOT(CONTAINS($UserRole.Name,&quot;Specialist&quot;)),
 $Profile.Name &lt;&gt; &quot;API admin&quot;,
 $Profile.Name &lt;&gt; &quot;System Admin - API&quot;,
 $Profile.Name &lt;&gt; &quot;Salesforce API Only System Integrations&quot;,
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Only Specialists can advance Design Requests to Design Review</errorMessage>
</ValidationRule>