force-app/main/default/objects/Design_Request__c/validationRules/Returned_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Returned_Reason_Required</fullName>
    <active>true</active>
    <description>Returned Reason Required when marking Status = Returned</description>
    <errorConditionFormula>AND(
 ISCHANGED(Status__c),
 ISPICKVAL(Status__c, &quot;Returned&quot;),
 ISBLANK( Returned_Reason__c )
)</errorConditionFormula>
    <errorDisplayField>Returned_Reason__c</errorDisplayField>
    <errorMessage>Returned Reason is required to mark Status as Returned</errorMessage>
</ValidationRule>