force-app/main/default/objects/Design_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Specialist__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>