force-app/main/default/objects/Design_Request__c/listViews/All_Design_Requests_Needing_Review.listView-meta.xml
<ListView>
    <fullName>All_Design_Requests_Needing_Review</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Specialist__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Return_Request__c</columns>
    <columns>Annual_Opportunity_Revenue__c</columns>
    <columns>Customer_Selling_Margin_Rate__c</columns>
    <columns>Workfront_Project__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Specialist Review,Design Review</value>
    </filters>
    <label>All Design Requests Needing Review</label>
</ListView>