force-app/main/default/objects/Design_Request__c/listViews/Legacy.listView-meta.xml
<ListView>
    <fullName>Legacy</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Specialist__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Requested_Completion_Date__c</columns>
    <columns>Actual_Start_Date__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Portfolio__c</field>
        <operation>equals</operation>
        <value>Legacy</value>
    </filters>
    <label>Legacy</label>
</ListView>