force-app/main/default/objects/Design_Request__c/listViews/My_Design_Requests_Needing_Review.listView-meta.xml
<ListView>
    <fullName>My_Design_Requests_Needing_Review</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Specialist__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requested_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_in_List_View__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Specialist Review</value>
    </filters>
    <label>My Design Requests Needing Review</label>
</ListView>